# RichWasm-artifact

./: CITATION.cff  Dockerfile  README.md
compilers/: compilers.opam  dune-project
compilers/l3/: codegen.ml  codegen.mli  debruijn.ml  debruijn.mli  dune  l3.ml  parse.ml  parse.mli  rich_wasm_of_l3.ml  source_printer.ml  source_printer.mli  syntax.ml  tagging.ml  tagging.mli  typecheck.ml
compilers/l3/examples/: l3_compiler_example.l3  prog_1.l3  prog_2.l3
compilers/ml/: annotate.ml  annotate.mli  codegen.ml  codegen.mli  debruijn.ml  dune  hoist.ml  hoist.mli  ml.ml  parse.ml  rich_wasm_of_ml.ml  source_printer.ml  syntax.ml  tagging.ml  typecheck.ml  typecheck.mli
compilers/ml/examples/: ml_compiler_example.ml  prog6.ml  prog9.ml
compilers/rich_wasm/: annotated_rich_wasm_of_rich_wasm.ml  dune  rich_wasm.ml  rich_wasm.mli  rich_wasm_compiler_interface.ml  rich_wasm_typechecker.ml  rich_wasm_typechecker.mli  sizing.ml  sizing.mli  solver.ml  solver.mli  substitution.ml  substitution.mli  typechecking_tests.ml  typechecking_tests.mli  typing_defs.ml  typing_defs.mli
compilers/richwasm/: Cargo.toml
compilers/richwasm/src/: allocator.wasm  interop_tests.rs  main.rs  parse.rs  parse_tests.rs  rwasm.rs  translate.rs  translate_insts.rs  translate_tests.rs
compilers/richwasm/tests/: list_interface.sexp~  list_partial.sexp~
compilers/richwasm/tests/parse/: list_interface.sexp  list_partial_function.sexp  list_types.sexp
compilers/richwasm/tests/translation_tests/arrays/: 0_test_endstate.rwasma  0_test_endstate.rwasma~  1_array_simple.rwasma  1_array_simple.rwasma~  2_array_multi.rwasma  2_array_multi.rwasma~
compilers/richwasm/tests/translation_tests/exists/: 0_test_endstate.rwasma  0_test_endstate.rwasma~  1_exist_simple.rwasma  1_exist_simple.rwasma~  2_exist_more_complex_a.rwasma  2_exist_more_complex_a.rwasma~  3_exist_more_complex_b.rwasma  3_exist_more_complex_b.rwasma~
compilers/richwasm/tests/translation_tests/function_calls/: 0_test_endstate.rwasma  1_with_id.rwasma  2_with_id_coderef.rwasma  2_with_id_coderef.rwasma~  3_with_indices.rwasma  3_with_indices.rwasma~  4_with_coderef_calling_conventions.rwasma  4_with_coderef_calling_conventions.rwasma~
compilers/richwasm/tests/translation_tests/groups/: 0_test_endstate.rwasma  0_test_endstate.rwasma~  1_with_groups.rwasma  1_with_groups.rwasma~  2_with_locals.rwasma  2_with_locals.rwasma~  3_with_structs.rwasma  3_with_structs.rwasma~  4_with_function_call.rwasma  4_with_function_call.rwasma~
compilers/richwasm/tests/translation_tests/structs/: 0_test_endstate.rwasma  0_test_endstate.rwasma~  1_malloc_get.rwasma  1_malloc_get.rwasma~  2_struct_multi.rwasma  2_struct_multi.rwasma~  3_with_groups.rwasma  3_with_groups.rwasma~  4_set_swap.rwasma  4_set_swap.rwasma~
(+49 files in other folders)
